k8s/apps/mealie/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mealie
  annotations:
    argocd.argoproj.io/sync-wave: "-100"
  labels:
    gateway.joelmccoy.dev/public-routes: "true"
    app.kubernetes.io/name: mealie
    istio.io/dataplane-mode: ambient
