k8s/apps/mealie/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mealie
  namespace: mealie
  annotations:
    argocd.argoproj.io/sync-wave: "20"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: istio-gateway
      namespace: istio-ingress
  hostnames:
    - "mealie.joelmccoy.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: mealie
          port: 9000
          weight: 1
